--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Keith-Wallace/BeenVerified/issues"
   },
-  "homepage": "https://github.com/Keith-Wallace/BeenVerified#readme"
+  "homepage": "https://github.com/Keith-Wallace/BeenVerified#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "nodemon": "^1.11.0"
+  }
 }
