--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "BeenVerified Code Challenge - Build a Homepage",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Keith-Wallace/BeenVerified#readme",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.14.0",
     "nodemon": "^1.11.0"
   }
