--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Keith-Wallace/BeenVerified/issues"
   },
-  "homepage": "https://github.com/Keith-Wallace/BeenVerified#readme"
+  "homepage": "https://github.com/Keith-Wallace/BeenVerified#readme",
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "jquery": "^1.9.1",
+    "nodemon": "^1.11.0",
+    "request": "^2.78.0"
+  }
 }
